--- a/PIM/TP_C/c1/1SN_LangageC_C1.ipynb
+++ b/PIM/TP_C/c1/1SN_LangageC_C1.ipynb
@@ -105,12 +105,11 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "******************************\n",
-      "******** Langage C ***********\n",
-      "******************************\n"
+      "gcc: error: unrecognized command line option '-rdynamic'\n",
+      "[C kernel] GCC exited with code 1, the executable will not be executed"
      ]
     }
    ],
